@@ -21,6 +21,8 @@ import org.joda.time.base.AbstractInstant;
 import org.joda.time.chrono.ISOChronology;
 import org.joda.time.convert.ConverterManager;
 import org.joda.time.convert.InstantConverter;
+import org.joda.time.format.DateTimeFormatter;
+import org.joda.time.format.ISODateTimeFormat;
 
 /**
  * Instant is the standard implementation of a fully immutable instant in time.
@@ -58,6 +60,30 @@ public final class Instant
 
     /** The millis from 1970-01-01T00:00:00Z */
     private final long iMillis;
+
+    //-----------------------------------------------------------------------
+    /**
+     * Parses a {@code Instant} from the specified string.
+     * <p>
+     * This uses {@link ISODateTimeFormat#dateTimeParser()}.
+     * 
+     * @param str  the string to parse, not null
+     * @since 2.0
+     */
+    public static Instant parse(String str) {
+        return parse(str, ISODateTimeFormat.dateTimeParser());
+    }
+
+    /**
+     * Parses a {@code Instant} from the specified string using a formatter.
+     * 
+     * @param str  the string to parse, not null
+     * @param formatter  the formatter to use, not null
+     * @since 2.0
+     */
+    public static Instant parse(String str, DateTimeFormatter formatter) {
+        return formatter.parseDateTime(str).toInstant();
+    }
 
     //-----------------------------------------------------------------------
     /**
