@@ -24,6 +24,8 @@ import junit.framework.TestSuite;
 
 import org.joda.time.chrono.GregorianChronology;
 import org.joda.time.chrono.ISOChronology;
+import org.joda.time.format.DateTimeFormat;
+import org.joda.time.format.DateTimeFormatter;
 
 /**
  * This class is a Junit unit test for MonthDay. Based on {@link TestYearMonth_Constuctors} 
@@ -73,6 +75,17 @@ public class TestMonthDay_Constructors extends TestCase {
         DateTimeUtils.setCurrentMillisSystem();
         DateTimeZone.setDefault(zone);
         zone = null;
+    }
+
+    //-----------------------------------------------------------------------
+    public void testParse_noFormatter() throws Throwable {
+        assertEquals(new MonthDay(6, 30), MonthDay.parse("2010-06-30"));
+        assertEquals(new MonthDay(1, 2), MonthDay.parse("2010-002"));
+    }
+
+    public void testParse_formatter() throws Throwable {
+        DateTimeFormatter f = DateTimeFormat.forPattern("yyyy--dd MM").withChronology(ISOChronology.getInstance(PARIS));
+        assertEquals(new MonthDay(6, 30), MonthDay.parse("2010--30 06", f));
     }
 
     //-----------------------------------------------------------------------
